--- a/aelahEZ.html
+++ b/aelahEZ.html
@@ -2,7 +2,7 @@
     <head>
         <body>
             <a href="LISTANJG.html">
-            <button class="CYKABLYADMAXUY">AOWKOKWOKAOKO PELER</button>
+            <button class="CYKABLYADMAXUY">dibuwat oleh haikal ganteng banget</button>
             </a>
         </body>
         <style>
